<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) [2017] [velli20]
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>

    <string name="app_name">Arduino Tank</string>

    <string name="menu_bluetooth_connect">Connect</string>
    <string name="menu_bluetooth_disconnect">Disconnect</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_accelerometer">Accelerometer</string>
    <string name="menu_controller_pad">Manual control</string>
    <string name="menu_console">Console</string>
    <string name="menu_programs">Programs</string>
    <string name="menu_save">Save</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_command_rotate">Rotate</string>
    <string name="menu_command_move">Move</string>
    <string name="menu_command_set_speed">Set speed</string>
    <string name="menu_command_delay">Delay</string>
    <string name="menu_command_other">Other command</string>
    <string name="menu_rename_program">Rename</string>
    <string name="menu_delete_program">Delete</string>
    <string name="menu_execute_program">Run program</string>
    <string name="menu_clear_console">Clear console</string>

    <string name="action_command_rotate" formatted="false">Rotate %d degrees %s</string>
    <string name="action_command_move" formatted="false">Move %d cm %s</string>
    <string name="action_command_set_speed" formatted="false">Set speed %d</string>
    <string name="action_command_delay" formatted="false">Delay %d %s</string>
    <string name="action_command_other">Other command</string>
    <string name="action_clockwise">Clockwise</string>
    <string name="action_counterclockwise">Counterclockwise</string>

    <string name="action_search_devices">Search devices</string>
    <string name="action_searching_devices">Searrching</string>
    <string name="action_connecting_to_device">Connecting</string>
    <string name="action_connecting_to_device_failed">Connecting to device failed </string>
    <string name="action_connected_to_device">Connected</string>
    <string name="action_retry">Retry</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_speed" formatted="false">Speed %d</string>

    <string name="title_new_devices">New devices</string>
    <string name="title_bonded_devices">Bonded devices</string>
    <string name="title_no_devices">No devices</string>
    <string name="title_device_no_name">(Unknown)</string>
    <string name="title_x_axis">X axis:</string>
    <string name="title_y_axis">Y axis:</string>
    <string name="title_new_program">New program</string>
    <string name="title_edit_program">Edit program</string>
    <string name="title_settings">Settings</string>
    <string name="title_no_programs">No programs</string>
    <string name="title_no_program_steps">No program steps.\nClick below to add a new program step</string>
    <string name="error_not_connected">Error: Disconnected</string>

    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>

    <string name="edit_text_hint_console">Command</string>
    <string name="edit_text_hint_distance">Distance (cm)</string>
    <string name="edit_text_hint_angle">Angle (asteina)</string>
    <string name="edit_text_hint_delay">Time</string>
    <string name="edit_text_hint_program_name">Program name</string>

    <string name="action_send_command">Send</string>
    <string name="action_hand_controls_forward">Forward</string>
    <string name="action_hand_controls_backward">Backward</string>
    <string name="action_hand_controls_to_right">To right</string>
    <string name="action_hand_controls_to_left">To left</string>
    <string name="action_forward">Forward</string>
    <string name="action_backward">Backward</string>
    <string name="action_speed_manual_control" formatted="false">Speed x: %d y: %d</string>

    <string name="toast_message_program_saved">Program saved.</string>
    <string name="toast_message_program_renamed">Program renamed.</string>

    <string name="preference_category_command_prefixes">Command prefixes</string>

    <string name="preference_command_prefix_accelerometer_x_axis">Accelerometer x-axis</string>
    <string name="preference_command_prefix_accelerometer_y_axis">Accelerometer y-axis</string>
    <string name="preference_command_prefix_joystick_x_axis">Joystick x-axis</string>
    <string name="preference_command_prefix_joystick_y_axis">Joystick y-axis</string>
    <string name="preference_command_prefix_move_forward">Move forward</string>
    <string name="preference_command_prefix_move_backward">Move backward</string>
    <string name="preference_command_prefix_delay">Delay</string>
    <string name="preference_command_prefix_rotate_clockwise">Rotate clockwise</string>
    <string name="preference_command_prefix_rotate_counterclockwise">Rotate counterclockwise</string>
    <string name="preference_command_prefix_set_speed">Set speed</string>


    <array name="command_move_directions">
        <item> @string/action_forward </item>
        <item> @string/action_backward </item>
    </array>

    <array name="command_rotate_directions">
        <item>@string/action_clockwise</item>
        <item>@string/action_counterclockwise</item>
    </array>

    <array name="command_delay_units">
        <item> ms </item>
        <item> s </item>
        <item> min </item>
    </array>

</resources>