<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) [2017] [velli20]
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_items_group_0"
        android:orderInCategory="0"
        android:checkableBehavior="single">


        <item
            android:id="@+id/nav_hand_control"
            android:icon="@mipmap/ic_controller_grey"
            android:title="@string/menu_controller_pad" />

        <item
            android:id="@+id/nav_accelerometer"
            android:icon="@mipmap/ic_accelerometer"
            android:title="@string/menu_accelerometer" />
        <item
            android:id="@+id/nav_routes"
            android:icon="@mipmap/ic_directions_grey"
            android:title="@string/menu_programs" />

        <item
            android:id="@+id/nav_console"
            android:icon="@mipmap/ic_console_grey"
            android:title="@string/menu_console" />


    </group>

    <group
        android:id="@+id/nav_items_group_1"
        android:orderInCategory="0"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/ic_settings_grey"
            android:title="@string/menu_settings" />
    </group>

</menu>
